--- a/index.html
+++ b/index.html
@@ -180,14 +180,18 @@
     });
 
     showQuestion(0);         <hr>
+<hr>
 <h3 style="text-align:center;">Want Full Results + Enter the Raffle?</h3>
 <div style="text-align:center; margin-top: 10px;">
-<a href=" https://docs.google.com/forms/d/e/1FAIpQLSf18alL6idY63jqx1aiZfczaS5mStdc-utOaHBtvOd9-ASp2g/viewform?usp=headertarget="_blank">
+<a href="https://docs.google.com/forms/d/e/YOUR_REAL_LINK/viewform?usp=sf_link" target="_blank">
 <button style="padding: 12px 24px; font-size: 16px; background-color: #d62828; color: white; border: none; border-radius: 5px; cursor: pointer;">
 Claim My Entry
 </button>
 </a>
 </div>
+
+</body>
+</html>
   </script>
 </body>
 </html>
